# stan_runner

./: .gitignore  README.md  pyproject.toml
src/stan_runner/: __init__.py  _stan_result_classes.py  cached_cmdstan_runner.py  cmdstan_runner.py  data.py  ifaces.py  ifaces2.py  main.py  model.py  pystan_run.py  result_adapter.py  runner.py  stan_result_base.py  stan_result_classes.py  stan_result_scopees.py  stan_result_scopes.py  utils.py
stan_runner/: __init__.py  capturing.py  cmdstan_runner.py  hatchet_client.py  hatchet_utils.py  hatchet_worker.py  ifaces.py  nats.client.py  nats_DTO.py  nats_DTO_BrokerInfo.py  nats_DTO_WorkerInfo.py  nats_DataInfo.py  nats_ModelInfo.py  nats_TaskInfo.py  nats_client.py  nats_ifaces.py  nats_message_broker.py  nats_ut.py  nats_utils.py  nats_worker.py  r_installer.py  r_utils.py  result_adapter.py  rpy_runner.py  utils.py  worker_capacity_info.py
tests/: nats_ut.py  test_1.py  test_2.py  test_cmdstanpy.py  test_cov.py  test_cov_result.py  test_hatchet.py  test_hatchet_client.py  test_hatchet_worker.py  test_iface.py  test_infer_param_shapes.py  test_json.py  test_list_brokers.py  test_multidim_result.py  test_nats.py  test_nats_broker.py  test_nats_client.py  test_results.py  test_serialization.py
